linux-jailhouse: Update to 5.4.31, 5.4.28-rt19, 5.4.29-rpi
This also pulls in the ivshmem-net fixes.

The RPi defconfig is aligned to the updates of the RPi kernel.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-kernel/linux/files/rpi4_defconfig_5.4
+++ b/recipes-kernel/linux/files/rpi4_defconfig_5.4
@@ -731,6 +731,7 @@ CONFIG_REGULATOR_ARIZONA_MICSUPP=m
 CONFIG_REGULATOR_GPIO=y
 CONFIG_RC_CORE=y
 CONFIG_LIRC=y
+CONFIG_BPF_LIRC_MODE2=y
 CONFIG_RC_DECODERS=y
 CONFIG_IR_NEC_DECODER=m
 CONFIG_IR_RC5_DECODER=m
@@ -955,6 +956,7 @@ CONFIG_SND_BCM2835_SOC_I2S=m
 CONFIG_SND_BCM2708_SOC_GOOGLEVOICEHAT_SOUNDCARD=m
 CONFIG_SND_BCM2708_SOC_HIFIBERRY_DAC=m
 CONFIG_SND_BCM2708_SOC_HIFIBERRY_DACPLUS=m
+CONFIG_SND_BCM2708_SOC_HIFIBERRY_DACPLUSHD=m
 CONFIG_SND_BCM2708_SOC_HIFIBERRY_DACPLUSADC=m
 CONFIG_SND_BCM2708_SOC_HIFIBERRY_DACPLUSADCPRO=m
 CONFIG_SND_BCM2708_SOC_HIFIBERRY_DACPLUSDSP=m
@@ -1042,6 +1044,7 @@ CONFIG_HID_SAMSUNG=m
 CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 CONFIG_HID_SPEEDLINK=m
+CONFIG_HID_STEAM=m
 CONFIG_HID_SUNPLUS=m
 CONFIG_HID_GREENASIA=m
 CONFIG_HID_SMARTJOYPLUS=m
@@ -1257,6 +1260,7 @@ CONFIG_DMA_BCM2708=y
 CONFIG_AUXDISPLAY=y
 CONFIG_HD44780=m
 CONFIG_UIO=y
+CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_IVSHMEM=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_JAILHOUSE_DBGCON=y
@@ -1314,6 +1318,7 @@ CONFIG_IIO_BUFFER_CB=m
 CONFIG_MCP320X=m
 CONFIG_MCP3422=m
 CONFIG_TI_ADS1015=m
+CONFIG_BME680=m
 CONFIG_DHT11=m
 CONFIG_HDC100X=m
 CONFIG_HTU21=m
@@ -1384,6 +1389,7 @@ CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_SWAP=y
 CONFIG_NFS_V4_1=y
+CONFIG_NFS_V4_2=y
 CONFIG_ROOT_NFS=y
 CONFIG_NFS_FSCACHE=y
 CONFIG_NFSD=m
@@ -1438,9 +1444,6 @@ CONFIG_NLS_KOI8_R=m
 CONFIG_NLS_KOI8_U=m
 CONFIG_DLM=m
 CONFIG_CRYPTO_USER=m
-CONFIG_CRYPTO_CBC=y
-CONFIG_CRYPTO_CTS=m
-CONFIG_CRYPTO_XTS=m
 CONFIG_CRYPTO_XCBC=m
 CONFIG_CRYPTO_TGR192=m
 CONFIG_CRYPTO_WP512=m
